// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API > srd-rules-engine 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "AdvantageGrantSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "NO_CONDITION_ROLLS",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "evaluate",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lookup",
  "makeAttack",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "skillName",
  "srdCatalog",
  "srdPack",
  "stat",
  "takeDamage",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/http 1`] = `
[
  "createHandler",
]
`;

exports[`public API > srd-rules-engine/node 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "AdvantageGrantSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "NO_CONDITION_ROLLS",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "evaluate",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "loadCatalog",
  "loadContentPack",
  "lookup",
  "makeAttack",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "serveNode",
  "skillName",
  "srdCatalog",
  "srdPack",
  "stat",
  "takeDamage",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;
